# Facet

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  sources.yaml
anchor/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  migrate.sql  pyproject.toml  requirements.txt
anchor/anchor/: __main__.py  cli.py  config.py  llm_client.py  models.py
anchor/anchor/chains/: content_extraction.py  fact_verification.py  general_assessment.py
anchor/anchor/chains/prompts/: policy_compare.py
anchor/anchor/collect/: bilibili.py  comment_collector.py  content_duplicate_checker.py  input_handler.py  manager.py  market.py  rss.py  twitter.py  web.py  weibo.py
anchor/anchor/commands/: backfill.py  company_sources.py  monitor.py  run_url.py  serve.py
anchor/anchor/database/: __init__.py
anchor/anchor/datasources/: __init__.py  base.py  bls.py  imf.py
anchor/anchor/extract/: router.py  sec_10k_splitter.py
anchor/anchor/extract/pipelines/: _base.py  _mapreduce.py  _writer.py  annual_report.py  causal.py  company.py  competitive_intel.py  doc_router.py  prospectus.py  proxy.py  xbrl_extract.py
anchor/anchor/extract/prompts/: __init__.py
anchor/anchor/extract/prompts/domains/: __init__.py  _base.py  company.py  industry.py  technology.py
anchor/anchor/extract/schemas/: __init__.py  company.py  nodes.py
anchor/anchor/monitor/: feed_fetcher.py
anchor/anchor/seeds/: __init__.py  ai_layer_schema.py
anchor/anchor/verify/: author_group_matcher.py  author_profiler.py  web_searcher.py
anchor/docs/: PRD.md
anchor/scripts/: ingest_company.py  ingest_peers.py  ingest_universe.py  load_nvidia_deep_data.py  load_nvidia_financials.py  nvidia_full_extract.py  nvidia_layer1_extract.py  nvidia_layer2_business_model.py  nvidia_multiyear_extract.py  nvidia_revenue_model_extract.py  nvidia_supply_chain_extract.py  patent_bulk_search.py  patent_cluster_bottomup.py  patent_tech_routes.py  patentsview_landscape.py  sec_10k_splitter.py
anchor/tests/: test_ollama_stress.py
axion/: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.md  docker-compose.yml  pyproject.toml
data/: berkshire_holdings.json  berkshire_stock_returns.json  player_stock_data.json  sp500.csv
docs/: PRD.md  anchor_moat_requirements.md  content_classification.md  extraction_redesign.md  polaris_data_requirements.md
polaris/: LICENSE  PRD.md  pyproject.toml
polaris/docs/: anchor_line2_requirements.md  anchor_output_contract.md  dalio_chain_design.md  feature_catalog.md
polaris/polaris/: cli.py  config.py
polaris/polaris/chains/: all_weather.py  buffett.py  business_type.py  character.py  dalio.py  distribution.py  earnings.py  integrity.py  moat.py  portfolio.py  predictability.py  risk.py  soros.py
polaris/polaris/db/: anchor.py
polaris/polaris/features/: pipeline.py  types.py
polaris/polaris/features/l0/: _helpers.py  company.py  cross_period.py
polaris/polaris/principles/: pipeline.py  rules.py
polaris/polaris/principles/engines/: quadrant.py
polaris/polaris/principles/v1/: soros.py
polaris/polaris/scoring/: rules.py  scorer.py
polaris/polaris/scoring/engines/: dcf.py  quadrant.py  risk_parity.py
polaris/polaris/scoring/v1/: buffett.py  buffett_chain.py  dalio.py  soros.py
polaris/tests/: data_historical_returns.py  data_market_implied.py  data_monthly_returns.json  data_monthly_signals.json  demo_all_final.py  demo_batch2.py  demo_batch3.py  demo_batch4.py  demo_batch_buffett.py  demo_buffett.py  demo_buffett_chain.py  demo_byd_full.py  demo_dalio_advanced.py  demo_dalio_chain.py  demo_dalio_global.py  demo_dalio_historical.py  demo_dcf.py  demo_distribution.py  demo_line2.py  demo_moat.py  demo_moat_all_paths.py  demo_moat_io.py  demo_moat_io_real.py  demo_moat_real.py  demo_oxy.py  demo_pipeline.py  demo_predictability.py  demo_unh_intc.py  fetch_historical_returns.py  test_all_weather.py  test_mock_pipeline.py  test_perf.py  test_stress.py  validate_with_real_data.py
(+139 files in other folders)
